# Liberal-Crime-Squad

./: .gitignore  COMPILE_README.txt  Makefile.am  README.md  configure.ac  crimesquad.desktop  start.fish
art/: licenses.txt
man/: crimesquad.6
src/: Makefile.am  common.h  compat.cpp  cursesgraphics.h  cursesmovie.cpp  cursesmovie.h  dumpcaps.cpp  externs.h  game.cpp  includes.h  lcsio.cpp  lcsio.h
src/basemode/: activate.cpp  baseactions.cpp  basemode.cpp  liberalagenda.cpp  reviewmode.cpp
src/cmarkup/: Markup.cpp  Markup.h
src/combat/: chase.cpp  fight.cpp  haulkidnap.cpp
src/common/: commonactions.cpp  commondisplay.cpp  consolesupport.cpp  equipment.cpp  getnames.cpp  misc.cpp
src/creature/: creature.cpp  creature.h  creaturenames.cpp  creaturetypes.cpp
src/daily/: activities.cpp  daily.cpp  date.cpp  interrogation.cpp  recruit.cpp  siege.cpp
src/locations/: locations.cpp  locations.h
src/monthly/: endgame.cpp  justice.cpp  lcsmonthly.cpp  monthly.cpp  sleeper_update.cpp
src/news/: ads.cpp  majorevent.cpp  news.cpp
src/pdcurses/: Makefile.am
src/pdcurses/x11/: pdcscrn.c
src/politics/: law.cpp  law.h  politics.cpp
src/sandbox/: creature_test.cpp  creature_test.h  globals.h
src/sitemode/: advance.cpp  mapspecials.cpp  miscactions.cpp  newencounter.cpp  sitedisplay.cpp  sitemap.cpp  sitemap.h  sitemode.cpp  stealth.cpp  talk.cpp
src/title/: highscore.cpp  newgame.cpp  saveload.cpp  titlescreen.cpp
